# Agente-Saude-Whatsapp

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py  settings.py
app/agents/: graph.py  persona.md  policies.md
app/constants/: emergencies.py  intents.py
app/prompts/: emergency_rules.txt  extract_schema.json  system_triage.txt
app/repositories/: chat_repo.py  triage_repo.py
app/routes/: chat.py  health.py  webhook.py
app/schemas/: chat.py  triage.py  whatsapp.py
app/services/: chat_service.py  llm.py  persistence.py  triage_guard.py  whatsapp.py
app/utils/: hashing.py  logging.py  time.py
scripts/: load_env.ps1  load_env.sh  ngrok_start.sh  set_webhook.sh
tests/: conftest.py
tests/integration/: test_emergency_flow.py  test_webhook_flow.py
tests/unit/: test_llm.py  test_persistence.py  test_schemas.py  test_triage_guard.py  test_whatsapp.py
